@@ -121,7 +121,7 @@ have a default polling frequency specified in slurm.conf in the
 JobAcctGatherFrequency parameter. The polling frequency can be overridden
 using the --acctg-freq
 <a href="srun.html">srun</a> parameter.
-They are both of the form task=sec,energy=sec,lustre=sec,network=sec.<p>
+They are both of the form task=sec,energy=sec,filesystem=sec,network=sec.<p>
 
 <p>The IPMI energy plugin also needs the EnergyIPMIFrequency value set
 in the acct_gather.conf file. This sets the rate at which the plugin samples
@@ -148,7 +148,7 @@ no data collected unless the <B>ProfileHDF5Default</B>
 option is used in acct_gather.conf. --profile on the command line overrides
 any value specified in the configuration file.</p>
 
-<DT><b>--profile</b>=&lt;all|none|[energy[,|task[,|lustre[,|network]]]]&gt;
+<DT><b>--profile</b>=&lt;all|none|[energy[,|task[,|filesystem[,|network]]]]&gt;
 <DD>
 <p>enables detailed data collection by the acct_gather_profile plugin.
 Detailed data are typically time-series that are stored in a HDF5 file for
@@ -269,13 +269,13 @@ correlate activity with other sources such as logs.</DD></DT>
 <DD>CPU Frequency at time of sample in kilohertz.</DD></DT>
 </DL>
 
-<h3>Lustre Data</h3>
+<h3>Filesystem Data</h3>
 <p><b>AcctGatherFilesystemType</b>=acct_gather_filesystem/lustre<p>
 is required in slurm.conf to collect task data.
-Appropriately set lustre=freq in either JobAcctGatherFrequency in slurm.conf
+Appropriately set Filesystem=freq in either JobAcctGatherFrequency in slurm.conf
 or in --acctg-freq on the command line.</p>
 
-<p>Each data sample in the Lustre Time Series contains the following data items.
+<p>Each data sample in the Filesystem Time Series contains the following data items.
 </p><DL>
 <DT><B>Date Time</B>
 <DD>Time of day at which the data sample was taken. This can be used to
